# booksV2

./: .gitignore  main.py  pyproject.toml
.github/workflows/: schedule-run.yml
notifications/: failedNotification.py  notification.py
notion/: __init__.py  queries.py  updateData.py
test_pages/: __init__.py  login.py  myList.py  test.py
test_pages/helper/: __init__.py  convertToNumber.py
